half of the project done

--- a/index.html
+++ b/index.html
@@ -10,89 +10,139 @@
 </head>
 
 <body>
-  <section class="intro">
-    <header class="header">
-      <div class="header__logo">
-        <img src="images/logo.svg" alt="logo">
-      </div>
-      <div class="header__links">
-        <nav>
-          <a href="#">Features</a>
-          <a href="#">Team</a>
-          <a href="#">Sign In</a>
-        </nav>
-      </div>
-    </header>
-    <div class="intro__wrapper">
-      <div class="intro__image">
-        <img src="images/illustration-intro.png" alt="intro">
-      </div>
-      <div class="intro__text">
-        <h1>All your files in one secure location, accessible anywhere.</h1>
-        <p>Fylo stores all your most important files in one secure location. Access them wherever
-          you need, share and collaborate with friends family, and co-workers.</p>
-        <button class="button">Get Started</button>
-      </div>
+  <header class="header">
+    <div class="header__logo">
+      <img src="images/logo.svg" alt="logo">
     </div>
-  </section>
-  <section class="feature__container">
-    <div class="feature__wrapper">
-      <div class="feature__card">
-        <img src="images/icon-access-anywhere.svg" alt="access">
-        <h3>Access your files, anywhere</h3>
-        <p>The ability to use a smartphone, tablet, or computer to access your account means your
-          files follow you everywhere.</p>
-      </div>
-      <div class="feature__card">
-        <img src="images/icon-security.svg" alt="security">
-        <h3>Security you can trust</h3>
-        <p>2-factor authentication and user-controlled encryption are just a couple of the security
-          features we allow to help secure your files.</p>
-      </div>
-      <div class="feature__card">
-        <img src="images/icon-collaboration.svg" alt="collaboration">
-        <h3>Real-time collaboration</h3>
-        <p>Securely share files and folders with friends, family and colleagues for live collaboration.
-          No email attachments required.</p>
-      </div>
-      <div class="feature__card">
-        <img src="images/icon-any-file.svg" alt="file">
-        <h3>Store any type of file</h3>
-        <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
-          file types to be securely stored and shared.</p>
-      </div>
+    <div class="header__links">
+      <nav>
+        <a href="#">Features</a>
+        <a href="#">Team</a>
+        <a href="#">Sign In</a>
+      </nav>
     </div>
-  </section>
+  </header>
+  <main>
+    <section class="intro">
+      <div class="intro__wrapper">
+        <div class="intro__image">
+          <img src="images/illustration-intro.png" alt="intro">
+        </div>
+        <div class="intro__text">
+          <h1>All your files in one secure location, accessible anywhere.</h1>
+          <p>Fylo stores all your most important files in one secure location. Access them wherever
+            you need, share and collaborate with friends family, and co-workers.</p>
+          <button class="button">Get Started</button>
+        </div>
+      </div>
+    </section>
+    <section class="feature__container">
+      <div class="feature__wrapper">
+        <div class="feature__card upper-card">
+          <img src="images/icon-access-anywhere.svg" alt="access">
+          <h3>Access your files, anywhere</h3>
+          <p>The ability to use a smartphone, tablet, or computer to access your account means your
+            files follow you everywhere.</p>
+        </div>
+        <div class="feature__card upper-card">
+          <img src="images/icon-security.svg" alt="security">
+          <h3>Security you can trust</h3>
+          <p>2-factor authentication and user-controlled encryption are just a couple of the security
+            features we allow to help secure your files.</p>
+        </div>
+        <div class="feature__card">
+          <img src="images/icon-collaboration.svg" alt="collaboration">
+          <h3>Real-time collaboration</h3>
+          <p>Securely share files and folders with friends, family and colleagues for live collaboration.
+            No email attachments required.</p>
+        </div>
+        <div class="feature__card">
+          <img src="images/icon-any-file.svg" alt="file">
+          <h3>Store any type of file</h3>
+          <p>Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
+            file types to be securely stored and shared.</p>
+        </div>
+      </div>
+    </section>
+    <section class="stay-productive">
+      <div class="stay-productive__wrapper">
+        <div class="stay-productive__image">
+          <img src="images/illustration-stay-productive.png" alt="stay-productive">
+        </div>
+        <div class="stay-productive__text">
+          <div class="stay-productive__text__wrapper">
+            <h1>Stay productive, wherever you are</h1>
+            <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file
+              storage
+              needs.</p>
+            <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
+              attachments required.</p>
+            <div class="link">
+              <a href="#">See how Fylo works</a>
+              <svg width="15" height="15" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <defs>
+                  <circle id="b" cx="6" cy="6" r="6" />
+                  <filter x="-25%" y="-25%" width="150%" height="150%" filterUnits="objectBoundingBox" id="a">
+                    <feOffset in="SourceAlpha" result="shadowOffsetOuter1" />
+                    <feGaussianBlur stdDeviation="1" in="shadowOffsetOuter1" result="shadowBlurOuter1" />
+                    <feColorMatrix
+                      values="0 0 0 0 0.384313725 0 0 0 0 0.878431373 0 0 0 0 0.850980392 0 0 0 0.811141304 0"
+                      in="shadowBlurOuter1" />
+                  </filter>
+                </defs>
+                <g fill="none" fill-rule="evenodd">
+                  <g transform="translate(2 2)">
+                    <use fill="#000" filter="url(#a)" xlink:href="#b" />
+                    <use fill="#62E0D9" xlink:href="#b" />
+                  </g>
+                  <path d="M8.582 6l-.363.35 1.452 1.4H5.333v.5h4.338L8.22 9.65l.363.35 2.074-2z" fill="#1B2330" />
+                </g>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="testimonial__container">
+      <div class="testimonial__wrapper">
+        <div class="testimonial__card">
+          <!-- <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.</p>
+          <div class="profile">
+            <img src="images/profile-1.jpg" alt="profile-1">
+            <div class="info">
+              <span>Satish Patel</span>
+              <span>Founder &amp; CEO, Huddle</span>
+            </div>
+          </div> -->
+        </div>
+        <div class="testimonial__card">
+          <!-- <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.</p>
+          <div class="profile">
+            <img src="images/profile-2.jpg" alt="profile-2">
+            <div class="info">
+              <span>Bruce McKenzie</span>
+              <span>Founder &amp; CEO, Huddle</span>
+            </div>
+          </div> -->
+        </div>
+        <div class="testimonial__card">
+          <!-- <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.</p>
+          <div class="profile">
+            <img src="images/profile-3.jpg" alt="profile-3">
+            <div class="info">
+              <span>Iva Boyd</span>
+              <span>Founder &amp; CEO, Huddle</span>
+            </div>
+          </div>
+        </div> -->
+      </div>
+    </section>
+  </main>
 
   <!--
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file
-  storage needs.
-
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email
-  attachments required.
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
   Get early access today
 
   It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
