testimonial section done

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section class="testimonial__container">
       <div class="testimonial__wrapper">
         <div class="testimonial__card">
-          <!-- <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
             become a well-oiled collaboration machine.</p>
           <div class="profile">
             <img src="images/profile-1.jpg" alt="profile-1">
@@ -114,10 +114,10 @@
               <span>Satish Patel</span>
               <span>Founder &amp; CEO, Huddle</span>
             </div>
-          </div> -->
+          </div>
         </div>
         <div class="testimonial__card">
-          <!-- <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
             become a well-oiled collaboration machine.</p>
           <div class="profile">
             <img src="images/profile-2.jpg" alt="profile-2">
@@ -125,10 +125,10 @@
               <span>Bruce McKenzie</span>
               <span>Founder &amp; CEO, Huddle</span>
             </div>
-          </div> -->
+          </div>
         </div>
         <div class="testimonial__card">
-          <!-- <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
             become a well-oiled collaboration machine.</p>
           <div class="profile">
             <img src="images/profile-3.jpg" alt="profile-3">
@@ -137,7 +137,7 @@
               <span>Founder &amp; CEO, Huddle</span>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </section>
   </main>
