--- a/index.html
+++ b/index.html
@@ -140,16 +140,24 @@
         </div>
       </div>
     </section>
+    <section class="early-access">
+      <div class="early-access__wrapper">
+        <h1>Get early access today</h1>
+        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+          questions, our support team would be happy to help you.</p>
+        <form>
+          <input type="email" autocomplete="off" placeholder="email@example.com">
+          <button class="button">Get Started For Free</button>
+        </form>
+      </div>
+    </section>
   </main>
+  <footer class="footer">
+    <div class="footer__wrapper">
 
+    </div>
+  </footer>
   <!--
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna aliqua
 
